--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -21,7 +21,7 @@
   "Tab_NoWorkflowSelected": "Select a workflow to get started",
   "Console_Title": "ComfyUI Console",
   "Console_Clear": "Clear console",
-  "Console_Instructions": "To intercept output from the ComfyUI console, ensure the custom node WebSocketLogStreamer.py is installed in the custom_nodes folder and the server has been restarted.",
+  "Console_Instructions": "To intercept output from the ComfyUI console, ensure the custom node Comfyui-ConsoleBridgeNode.py is installed in the custom_nodes folder and the server has been restarted.",
   "Fullscreen_Close": "Close",
   "Fullscreen_Previous": "Previous",
   "Fullscreen_Next": "Next",
