--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -13,8 +13,9 @@
   "Tab_DeleteFile": "Delete file",
   "Tab_SeedControl": "Seed Control",
   "Tab_Queue": "Queue",
-  "Tab_ClearQueue": "Clear queue",
-  "Tab_CompletedTasks": "Completed: {0}/{1}",
+  "Tab_ClearQueue": "Clear Queue",
+  "Tab_ToggleInfiniteQueue": "Toggle Infinite Queue (Queue another batch when the current one is finished)",
+  "Tab_CompletedTasks": "Completed: {1}/{2}",
   "Tab_SelectedItems": "Selected:",
   "Tab_DeleteSelected": "Delete Selected",
   "Tab_ClearResults": "Clear results",
