delete workflow command

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -28,8 +28,13 @@
   "Fullscreen_Next": "Next",
   "Fullscreen_SaveImage": "Save Image",
   "Toolbar_EditWorkflow": "Edit workflow",
-  "Toolbar_NewWorkflow": "Create new workflow",
-  "Toolbar_ResetSession": "Reset session for the current workflow",
+  "Toolbar_NewWorkflow": "New Workflow",
+  "Toolbar_DeleteWorkflow": "Delete Selected Workflow",
+  "Toolbar_ResetSession": "Reset Session",
+  "MainVM_DeleteConfirmTitle": "Confirm Deletion",
+  "MainVM_DeleteConfirmMessage": "Are you sure you want to permanently delete the workflow '{0}'?\n\nThis action cannot be undone.",
+  "MainVM_DeleteErrorTitle": "Deletion Error",
+  "MainVM_DeleteErrorMessage": "An error occurred while deleting the workflow: {0}",
   "Toolbar_SaveChanges": "Save current values as defaults in the workflow file",
   "Toolbar_ExportState": "Export current parameters to .json for ComfyUI",
   "Toolbar_RefreshModels": "Refresh model lists",
