--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -28,8 +28,13 @@
   "Fullscreen_Next": "Следующее",
   "Fullscreen_SaveImage": "Сохранить изображение",
   "Toolbar_EditWorkflow": "Редактировать воркфлоу",
-  "Toolbar_NewWorkflow": "Создать новый воркфлоу",
-  "Toolbar_ResetSession": "Сбросить сессию для текущего воркфлоу",
+  "Toolbar_NewWorkflow": "Новый процесс",
+  "Toolbar_DeleteWorkflow": "Удалить выбранный процесс",
+  "Toolbar_ResetSession": "Сбросить сессию",
+  "MainVM_DeleteConfirmTitle": "Подтвердите удаление",
+  "MainVM_DeleteConfirmMessage": "Вы уверены, что хотите безвозвратно удалить процесс '{0}'?\n\nЭто действие нельзя отменить.",
+  "MainVM_DeleteErrorTitle": "Ошибка удаления",
+  "MainVM_DeleteErrorMessage": "Произошла ошибка при удалении процесса: {0}",
   "Toolbar_SaveChanges": "Сохранить текущие значения как значения по умолчанию в файле воркфлоу",
   "Toolbar_ExportState": "Экспортировать текущие параметры в .json для ComfyUI",
   "Toolbar_RefreshModels": "Обновить списки моделей",
