--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -15,7 +15,7 @@
   "Tab_Queue": "Queue",
   "Tab_ClearQueue": "Clear Queue",
   "Tab_ToggleInfiniteQueue": "Toggle Infinite Queue (Queue another batch when the current one is finished)",
-  "Tab_CompletedTasks": "Completed: {1}/{2}",
+  "Tab_CompletedTasks": "Completed: {0}/{1}",
   "Tab_SelectedItems": "Selected:",
   "Tab_DeleteSelected": "Delete Selected",
   "Tab_ClearResults": "Clear results",
@@ -27,19 +27,21 @@
   "Fullscreen_Previous": "Previous",
   "Fullscreen_Next": "Next",
   "Fullscreen_SaveImage": "Save Image",
+  "Fullscreen_Saving": "Saving...",
+  "Fullscreen_Saved": "Saved!",
   "Toolbar_EditWorkflow": "Edit workflow",
   "Toolbar_NewWorkflow": "New Workflow",
   "Toolbar_DeleteWorkflow": "Delete Selected Workflow",
   "Toolbar_ResetSession": "Reset Session",
-  "MainVM_DeleteConfirmTitle": "Confirm Deletion",
-  "MainVM_DeleteConfirmMessage": "Are you sure you want to permanently delete the workflow '{0}'?\n\nThis action cannot be undone.",
-  "MainVM_DeleteErrorTitle": "Deletion Error",
-  "MainVM_DeleteErrorMessage": "An error occurred while deleting the workflow: {0}",
   "Toolbar_SaveChanges": "Save current values as defaults in the workflow file",
   "Toolbar_ExportState": "Export current parameters to .json for ComfyUI",
   "Toolbar_RefreshModels": "Refresh model lists",
   "Toolbar_ToggleConsole": "Show/hide ComfyUI console",
   "Toolbar_Settings": "Settings",
+  "MainVM_DeleteConfirmTitle": "Confirm Deletion",
+  "MainVM_DeleteConfirmMessage": "Are you sure you want to permanently delete the workflow '{0}'?\n\nThis action cannot be undone.",
+  "MainVM_DeleteErrorTitle": "Deletion Error",
+  "MainVM_DeleteErrorMessage": "An error occurred while deleting the workflow: {0}",
   "MainVM_SaveConfirmationTitle": "Confirm Save as Default",
   "MainVM_SaveConfirmationMessage": "Are you sure you want to overwrite the '{0}' file with the current widget values?\n\nThis action cannot be undone and will update the default values for this workflow.",
   "MainVM_ValuesSavedTitle": "Saved",
@@ -86,6 +88,8 @@
   "UIConstructor_Field_Items": "Items (comma-separated):",
   "UIConstructor_Field_ModelSubtype": "Model Subtype:",
   "UIConstructor_Field_SelectSubtype": "Select a subtype...",
+  "UIConstructor_SetColor": "Set Color",
+  "UIConstructor_ClearColor": "Clear Color",
   "Inpaint_ErrorLoadingImageTitle": "Error",
   "Inpaint_ErrorLoadingImageMessage": "Error loading image: {0}",
   "Inpaint_Control": "Control",
@@ -112,7 +116,6 @@
   "ImageProcessing_DeleteConfirmTitle": "Confirm Deletion",
   "ImageProcessing_DeleteConfirmMessageSingle": "Are you sure you want to delete '{0}'?",
   "ImageProcessing_DeleteConfirmMessageMultiple": "Are you sure you want to delete {0} item(s)?",
-  "ModelService_ErrorFetchModelTypes": "Failed to fetch model types: {0}",
   "Settings_Title": "Settings",
   "Settings_Samplers": "Samplers",
   "Settings_Schedulers": "Schedulers",
@@ -152,6 +155,8 @@
   "Settings_Hotkey_SaveImage": "Save current image (in fullscreen mode)",
   "Settings_Hotkey_ExitFullscreen": "Close fullscreen mode",
   "Settings_Hotkey_Paste": "Paste an image from the clipboard or a copied file into fields of type 'Any' or 'ImageInput'",
+  "Settings_Hotkey_ToggleInpaintMode": "Toggle mask/sketch mode (in editor)",
+  "Settings_Hotkey_ChangeBrushSize": "Change brush size (in editor)",
   "Settings_SaveAndClose": "Save and Close",
   "Settings_Cancel": "Cancel",
   "Window_Minimize": "Minimize",
@@ -163,6 +168,24 @@
   "Wildcard_Browse": "Browse Wildcards",
   "WorkflowList_Recent": "Recent",
   "WorkflowList_All": "All",
-  "UIConstructor_SetColor": "Set Color",
-  "UIConstructor_ClearColor": "Clear Color"
+  "App_CriticalErrorTitle": "Critical Error",
+  "App_CriticalErrorMessage": "A critical error has occurred. The application will now close. Details have been written to the log file in the 'logs' folder.",
+  "Server_StartError": "Could not start internal media server: {0}",
+  "Server_PlaybackErrorTitle": "Playback Error",
+  "ModelService_ErrorFetchModelTypes": "Failed to fetch model types: {0}",
+  "TextField_Base64Placeholder": "[Base64 Image Data: {0} KB]",
+  "GlobalSettings_Header": "Global Settings",
+  "FilterableComboBox_ClearSearchTooltip": "Clear search",
+  "Color_Red": "Red",
+  "Color_Terracotta": "Terracotta",
+  "Color_Brown": "Brown",
+  "Color_Amber": "Amber",
+  "Color_Olive": "Olive",
+  "Color_Green": "Green",
+  "Color_Teal": "Teal",
+  "Color_Blue": "Blue",
+  "Color_Indigo": "Indigo",
+  "Color_Purple": "Purple",
+  "Color_Plum": "Plum",
+  "Color_Slate": "Slate"
 }
