--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -27,19 +27,21 @@
   "Fullscreen_Previous": "Предыдущее",
   "Fullscreen_Next": "Следующее",
   "Fullscreen_SaveImage": "Сохранить изображение",
+  "Fullscreen_Saving": "Сохранение...",
+  "Fullscreen_Saved": "Сохранено!",
   "Toolbar_EditWorkflow": "Редактировать воркфлоу",
   "Toolbar_NewWorkflow": "Новый процесс",
   "Toolbar_DeleteWorkflow": "Удалить выбранный процесс",
   "Toolbar_ResetSession": "Сбросить сессию",
-  "MainVM_DeleteConfirmTitle": "Подтвердите удаление",
-  "MainVM_DeleteConfirmMessage": "Вы уверены, что хотите безвозвратно удалить процесс '{0}'?\n\nЭто действие нельзя отменить.",
-  "MainVM_DeleteErrorTitle": "Ошибка удаления",
-  "MainVM_DeleteErrorMessage": "Произошла ошибка при удалении процесса: {0}",
   "Toolbar_SaveChanges": "Сохранить текущие значения как значения по умолчанию в файле воркфлоу",
   "Toolbar_ExportState": "Экспортировать текущие параметры в .json для ComfyUI",
   "Toolbar_RefreshModels": "Обновить списки моделей",
   "Toolbar_ToggleConsole": "Показать/скрыть консоль ComfyUI",
   "Toolbar_Settings": "Настройки",
+  "MainVM_DeleteConfirmTitle": "Подтвердите удаление",
+  "MainVM_DeleteConfirmMessage": "Вы уверены, что хотите безвозвратно удалить процесс '{0}'?\n\nЭто действие нельзя отменить.",
+  "MainVM_DeleteErrorTitle": "Ошибка удаления",
+  "MainVM_DeleteErrorMessage": "Произошла ошибка при удалении процесса: {0}",
   "MainVM_SaveConfirmationTitle": "Подтверждение сохранения по умолчанию",
   "MainVM_SaveConfirmationMessage": "Вы уверены, что хотите перезаписать файл '{0}' текущими значениями виджетов?\n\nЭто действие нельзя отменить, и оно обновит значения по умолчанию для этого воркфлоу.",
   "MainVM_ValuesSavedTitle": "Сохранено",
@@ -86,6 +88,8 @@
   "UIConstructor_Field_Items": "Элементы (через запятую):",
   "UIConstructor_Field_ModelSubtype": "Подтип модели:",
   "UIConstructor_Field_SelectSubtype": "Выберите подтип...",
+  "UIConstructor_SetColor": "Задать цвет",
+  "UIConstructor_ClearColor": "Сбросить цвет",
   "Inpaint_ErrorLoadingImageTitle": "Ошибка",
   "Inpaint_ErrorLoadingImageMessage": "Ошибка при загрузке изображения: {0}",
   "Inpaint_Control": "Управление",
@@ -112,7 +116,6 @@
   "ImageProcessing_DeleteConfirmTitle": "Подтверждение удаления",
   "ImageProcessing_DeleteConfirmMessageSingle": "Вы уверены, что хотите удалить '{0}'?",
   "ImageProcessing_DeleteConfirmMessageMultiple": "Вы уверены, что хотите удалить {0} элемент(ов)?",
-  "ModelService_ErrorFetchModelTypes": "Не удалось получить типы моделей: {0}",
   "Settings_Title": "Настройки",
   "Settings_Samplers": "Samplers",
   "Settings_Schedulers": "Schedulers",
@@ -152,6 +155,8 @@
   "Settings_Hotkey_SaveImage": "Сохранить текущее изображение (в полноэкранном режиме)",
   "Settings_Hotkey_ExitFullscreen": "Закрыть полноэкранный режим",
   "Settings_Hotkey_Paste": "Вставить изображение из буфера обмена или скопированный файл в поля типа 'Any' или 'ImageInput'",
+  "Settings_Hotkey_ToggleInpaintMode": "Переключить режим маска/скетч (в редакторе)",
+  "Settings_Hotkey_ChangeBrushSize": "Изменить размер кисти (в редакторе)",
   "Settings_SaveAndClose": "Сохранить и закрыть",
   "Settings_Cancel": "Отмена",
   "Window_Minimize": "Свернуть",
@@ -163,6 +168,24 @@
   "Wildcard_Browse": "Обзор Wildcards",
   "WorkflowList_Recent": "Последние",
   "WorkflowList_All": "Все",
-  "UIConstructor_SetColor": "Задать цвет",
-  "UIConstructor_ClearColor": "Сбросить цвет"
+  "App_CriticalErrorTitle": "Критическая ошибка",
+  "App_CriticalErrorMessage": "Произошла критическая ошибка. Приложение будет закрыто. Подробности записаны в лог-файл в папке 'logs'.",
+  "Server_StartError": "Не удалось запустить внутренний медиасервер: {0}",
+  "Server_PlaybackErrorTitle": "Ошибка воспроизведения",
+  "ModelService_ErrorFetchModelTypes": "Не удалось получить типы моделей: {0}",
+  "TextField_Base64Placeholder": "[Данные изображения Base64: {0} КБ]",
+  "GlobalSettings_Header": "Глобальные настройки",
+  "FilterableComboBox_ClearSearchTooltip": "Очистить поиск",
+  "Color_Red": "Красный",
+  "Color_Terracotta": "Терракотовый",
+  "Color_Brown": "Коричневый",
+  "Color_Amber": "Янтарный",
+  "Color_Olive": "Оливковый",
+  "Color_Green": "Зеленый",
+  "Color_Teal": "Бирюзовый",
+  "Color_Blue": "Синий",
+  "Color_Indigo": "Индиго",
+  "Color_Purple": "Фиолетовый",
+  "Color_Plum": "Сливовый",
+  "Color_Slate": "Серый"
 }
