style fixes & old workflow migration for scripts+markdown

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -201,5 +201,7 @@
   "UIConstructor_DuplicateActionNameError": "An action with this name already exists.",
   "UIConstructor_NewActionDefaultName": "new_action",
   "UIConstructor_PythonPlaceholder": "Your Python script here",
-  "UIConstructor_TestScriptTooltip": "Test Script"
+  "UIConstructor_TestScriptTooltip": "Test Script",
+  "UIConstructor_AddMarkdownField": "Add Markdown Field",
+  "UIConstructor_AddScriptButtonField": "Add Script Button"
 }
