block node id output in gallery from contexmenu

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -39,6 +39,7 @@
   "Toolbar_RefreshModels": "Refresh model lists",
   "Toolbar_ToggleConsole": "Show/hide ComfyUI console",
   "Toolbar_Settings": "Settings",
+  "Toolbar_ClearBlockedNodes": "Clear Blocked Nodes",
   "MainVM_DeleteConfirmTitle": "Confirm Deletion",
   "MainVM_DeleteConfirmMessage": "Are you sure you want to permanently delete the workflow '{0}'?\n\nThis action cannot be undone.",
   "MainVM_DeleteErrorTitle": "Deletion Error",
@@ -60,6 +61,10 @@
   "MainVM_ConnectionErrorMessage": "Could not connect to ComfyUI.\n\nPlease ensure the server is running and accessible.",
   "MainVM_SessionResetTitle": "Session Reset",
   "MainVM_SessionResetMessage": "The session for '{0}' has been reset to default values.",
+  "MainVM_ClearBlockedNodesConfirmTitle": "Confirm Clear",
+  "MainVM_ClearBlockedNodesConfirmMessage": "Are you sure you want to clear the list of all blocked nodes for this workflow?",
+  "MainVM_ClearBlockedNodesSuccessTitle": "List Cleared",
+  "MainVM_ClearBlockedNodesSuccessMessage": "The blocked node list for this workflow has been cleared.",
   "WildcardBrowser_Title": "Wildcard Browser",
   "WildcardBrowser_Insert": "Insert",
   "WildcardBrowser_Cancel": "Cancel",
@@ -167,6 +172,7 @@
   "Window_Restore": "Restore",
   "Window_Close": "Close",
   "General_Error": "Error",
+  "ContextMenu_BlockNode": "Block Node",
   "ComboBox_PlaceholderDefault": "Select or enter a value...",
   "Wildcard_Browse": "Browse Wildcards",
   "WorkflowList_Recent": "Recent",
