--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -39,6 +39,7 @@
   "Toolbar_RefreshModels": "Обновить списки моделей",
   "Toolbar_ToggleConsole": "Показать/скрыть консоль ComfyUI",
   "Toolbar_Settings": "Настройки",
+  "Toolbar_ClearBlockedNodes": "Очистить список блокировок",
   "MainVM_DeleteConfirmTitle": "Подтвердите удаление",
   "MainVM_DeleteConfirmMessage": "Вы уверены, что хотите безвозвратно удалить процесс '{0}'?\n\nЭто действие нельзя отменить.",
   "MainVM_DeleteErrorTitle": "Ошибка удаления",
@@ -60,6 +61,10 @@
   "MainVM_ConnectionErrorMessage": "Не удалось подключиться к ComfyUI.\n\nПожалуйста, убедитесь, что сервер запущен и доступен.",
   "MainVM_SessionResetTitle": "Сессия сброшена",
   "MainVM_SessionResetMessage": "Сессия для '{0}' была сброшена к значениям по умолчанию.",
+  "MainVM_ClearBlockedNodesConfirmTitle": "Подтвердите очистку",
+  "MainVM_ClearBlockedNodesConfirmMessage": "Вы уверены, что хотите очистить список заблокированных нод для этого процесса?",
+  "MainVM_ClearBlockedNodesSuccessTitle": "Список очищен",
+  "MainVM_ClearBlockedNodesSuccessMessage": "Список заблокированных нод для этого процесса был очищен.",
   "WildcardBrowser_Title": "Wildcard Browser",
   "WildcardBrowser_Insert": "Вставить",
   "WildcardBrowser_Cancel": "Отмена",
@@ -167,6 +172,7 @@
   "Window_Restore": "Восстановить",
   "Window_Close": "Закрыть",
   "General_Error": "Ошибка",
+  "ContextMenu_BlockNode": "Заблокировать ноду",
   "ComboBox_PlaceholderDefault": "Выберите или введите...",
   "Wildcard_Browse": "Обзор Wildcards",
   "WorkflowList_Recent": "Последние",
