[wip] workflow tabs

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -1,4 +1,15 @@
 {
+  "UIConstructor_LayoutHeader": "Layout",
+  "UIConstructor_ScriptsHeader": "Scripts",
+  "UIConstructor_AvailableFields": "Available Fields",
+  "UIConstructor_TabsHeader": "Tabs",
+  "UIConstructor_AddTab": "Add a new tab",
+  "UIConstructor_UnassignedGroupsHeader": "Unassigned Groups",
+  "UIConstructor_DragGroupTooltip": "Drag this group to a tab or to the unassigned list",
+  "UIConstructor_NewTabDefaultName": "New Tab",
+  "UIConstructor_ConfirmDeleteTabTitle": "Confirmation",
+  "UIConstructor_ConfirmDeleteTabMessage": "Are you sure you want to delete the tab '{0}'? All groups from this tab will become unassigned.",
+  "UIConstructor_ScriptsHeader": "Scripts",
   "FilterableComboBox_Placeholder": "Select or find a workflow...",
   "Tab_Outputs": "Outputs",
   "Tab_WildcardSeed": "Wildcard Seed",
