--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -1,4 +1,15 @@
 {
+  "UIConstructor_LayoutHeader": "Разметка",
+  "UIConstructor_ScriptsHeader": "Скрипты",
+  "UIConstructor_AvailableFields": "Доступные поля",
+  "UIConstructor_TabsHeader": "Вкладки",
+  "UIConstructor_AddTab": "Добавить новую вкладку",
+  "UIConstructor_UnassignedGroupsHeader": "Нераспределенные группы",
+  "UIConstructor_DragGroupTooltip": "Перетащите эту группу на вкладку или в список нераспределенных",
+  "UIConstructor_NewTabDefaultName": "Новая вкладка",
+  "UIConstructor_ConfirmDeleteTabTitle": "Подтверждение",
+  "UIConstructor_ConfirmDeleteTabMessage": "Вы уверены, что хотите удалить вкладку '{0}'? Все группы с этой вкладки станут нераспределенными.",
+  "UIConstructor_ScriptsHeader": "Скрипты",
   "FilterableComboBox_Placeholder": "Выберите или найдите воркфлоу...",
   "Tab_Outputs": "Результаты",
   "Tab_WildcardSeed": "Wildcard Seed",
