--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -29,9 +29,12 @@
   "Tab_DeleteSelected": "Удалить выделенное",
   "Tab_ClearResults": "Очистить результаты",
   "Tab_NoWorkflowSelected": "Выберите рабочий процесс, чтобы начать",
-  "Console_Title": "Консоль ComfyUI",
+  "Console_Title": "Консоль",
   "Console_Copy": "Копировать содержимое консоли",
   "Console_Clear": "Очистить консоль",
+  "Console_FilterAll": "Все",
+  "Console_FilterComfy": "Comfy",
+  "Console_FilterLocal": "Локальные",
   "Console_Instructions": "Для перехвата вывода из консоли ComfyUI, убедитесь, что в папку custom_nodes установлен кастомный узел Comfyui-ConsoleBridgeNode.py и сервер был перезапущен.",
   "Fullscreen_Close": "Закрыть",
   "Fullscreen_Previous": "Предыдущее",
