--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -35,6 +35,7 @@
   "Console_FilterAll": "All",
   "Console_FilterComfy": "Comfy",
   "Console_FilterLocal": "Local",
+  "Console_FilterPython": "Python",
   "Console_Instructions": "To intercept output from the ComfyUI console, ensure the custom node Comfyui-ConsoleBridgeNode.py is installed in the custom_nodes folder and the server has been restarted.",
   "Fullscreen_Close": "Close",
   "Fullscreen_Previous": "Previous",
