better pack wildcards and translations

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -81,6 +81,9 @@
   "WildcardBrowser_Title": "Wildcard Browser",
   "WildcardBrowser_Insert": "Insert",
   "WildcardBrowser_Cancel": "Cancel",
+  "WildcardBrowser_RefreshList": "Refresh List",
+  "WildcardBrowser_PackToYaml": "Pack wildcards to YAML",
+  "WildcardBrowser_UnpackFromYaml": "Unpack wildcards from YAML",
   "UIConstructor_Title": "Workflow Designer",
   "UIConstructor_LoadApiFile": "Load Workflow API File",
   "UIConstructor_SearchPlaceholder": "Search fields...",
