--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -81,6 +81,9 @@
   "WildcardBrowser_Title": "Wildcard Browser",
   "WildcardBrowser_Insert": "Вставить",
   "WildcardBrowser_Cancel": "Отмена",
+  "WildcardBrowser_RefreshList": "Обновить список",
+  "WildcardBrowser_PackToYaml": "Упаковать вайлдкарды в YAML",
+  "WildcardBrowser_UnpackFromYaml": "Распаковать вайлдкарды из YAML",
   "UIConstructor_Title": "Workflow Designer",
   "UIConstructor_LoadApiFile": "Загрузить Workflow API файл",
   "UIConstructor_SearchPlaceholder": "Поиск полей...",
