filter saved/unsaved.

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -17,6 +17,9 @@
   "Tab_GalleryFilterAll": "All",
   "Tab_GalleryFilterImages": "Images",
   "Tab_GalleryFilterVideo": "Video",
+  "Tab_GalleryFilterSavedStatus": "Status:",
+  "Tab_GalleryFilterSaved": "Saved",
+  "Tab_GalleryFilterUnsaved": "Unsaved",
   "Tab_GallerySort": "Sort by:",
   "Tab_GalleryThumbnailSize": "Size:",
   "Tab_DeleteFile": "Delete file",
@@ -28,6 +31,7 @@
   "Tab_SelectedItems": "Selected:",
   "Tab_DeleteSelected": "Delete Selected",
   "Tab_ClearResults": "Clear results",
+  "Tab_ClearFilteredResults": "Clear filtered results",
   "Tab_NoWorkflowSelected": "Select a workflow to get started",
   "Console_Title": "Console",
   "Console_Copy": "Copy console content",
