--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -17,6 +17,9 @@
   "Tab_GalleryFilterAll": "Все",
   "Tab_GalleryFilterImages": "Изображения",
   "Tab_GalleryFilterVideo": "Видео",
+  "Tab_GalleryFilterSavedStatus": "Статус:",
+  "Tab_GalleryFilterSaved": "Сохраненные",
+  "Tab_GalleryFilterUnsaved": "Несохраненные",
   "Tab_GallerySort": "Сортировка:",
   "Tab_GalleryThumbnailSize": "Размер:",
   "Tab_DeleteFile": "Удалить файл",
@@ -27,7 +30,7 @@
   "Tab_CompletedTasks": "Завершено: {0}/{1}",
   "Tab_SelectedItems": "Выделено:",
   "Tab_DeleteSelected": "Удалить выделенное",
-  "Tab_ClearResults": "Очистить результаты",
+  "Tab_ClearFilteredResults": "Очистить отфильтрованные результаты",
   "Tab_NoWorkflowSelected": "Выберите рабочий процесс, чтобы начать",
   "Console_Title": "Консоль",
   "Console_Copy": "Копировать содержимое консоли",
